add PUT /modules/{id}/error
